--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <div class="main">
-    <span class="animated-span-2">Berger    Maximilian</span>
-    <span class="animated-span">Berger    Maximilian</span>
+    <span class="animated-span-2">Berger    Maximilian der Beste</span>
+    <span class="animated-span">Berger    Maximilian der Beste</span>
   </div>
   <script src="./app.js"></script>
 </body>
